--- a/src/app/pages/dashboard/ecommerce/ecommerce.component.html
+++ b/src/app/pages/dashboard/ecommerce/ecommerce.component.html
@@ -1,13 +1,14 @@
 <div class="grid grid-cols-12 gap-4 md:gap-6">
-  <div class="col-span-12 space-y-6 xl:col-span-7">
-    <div><app-ecommerce-metrics [totalSurveys]="totalSurveys" /></div>
-
-    <div><app-monthly-sales-chart /></div>
+  <div *ngIf="!loading" class="col-span-12 space-y-6">
+    <div>
+      <app-ecommerce-metrics [totalSurveys]="totalSurveys" />
+    </div>
+    <!-- <div><app-monthly-sales-chart /></div> -->
   </div>
 
-  <div class="col-span-12 xl:col-span-5">
+  <!-- <div class="col-span-12 xl:col-span-5">
     <app-monthly-target />
-  </div>
+  </div> -->
 
   <!-- <div class="col-span-12">
     <app-statics-chart />
@@ -17,7 +18,11 @@
     <app-demographic-card />
   </div> -->
 
-  <div class="col-span-12">
+  <div *ngIf="!loading" class="col-span-12">
     <app-recent-orders [tableData]="surveys" />
   </div>
+  
 </div>
+<div *ngIf="loading" class="flex max-h-[80vh] my-auto justify-center items-center h-screen">
+    <div class="animate-spin rounded-full h-12 w-12 border-4 border-t-blue-500 border-gray-300"></div>
+  </div>
