--- a/src/app/shared/components/ecommerce/ecommerce-metrics/ecommerce-metrics.component.html
+++ b/src/app/shared/components/ecommerce/ecommerce-metrics/ecommerce-metrics.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:gap-6">
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-1 md:gap-6">
   <!-- Metric Item Start -->
   <div class="rounded-2xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-white/[0.03] md:p-6">
     <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.groupIcon | safeHtml">
@@ -8,16 +8,16 @@
         <span class="text-sm text-gray-500 dark:text-gray-400">Surveys</span>
         <h4 class="mt-2 font-bold text-gray-800 text-title-sm dark:text-white/90">{{totalSurveys}}</h4>
       </div>
-      <app-badge color="success">
+      <!-- <app-badge color="success">
         <span [innerHTML]="icons.arrowUpIcon | safeHtml"></span>
         11.01%
-      </app-badge>
+      </app-badge> -->
     </div>
   </div>
   <!-- Metric Item End -->
 
   <!-- Metric Item Start -->
-  <div class="rounded-2xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-white/[0.03] md:p-6">
+  <!-- <div class="rounded-2xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-white/[0.03] md:p-6">
     <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.boxIconLine| safeHtml">
     </div>
     <div class="flex items-end justify-between mt-5">
@@ -30,6 +30,6 @@
         9.05%
       </app-badge>
     </div>
-  </div>
+  </div> -->
   <!-- Metric Item End -->
 </div>
