--- a/src/app/shared/components/ecommerce/recent-orders/recent-orders.component.html
+++ b/src/app/shared/components/ecommerce/recent-orders/recent-orders.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="flex items-center gap-3">
-      <button
+      <!-- <button
         class="inline-flex items-center gap-2 rounded-lg border border-gray-300 bg-white px-4 py-2.5 text-theme-sm font-medium text-gray-700 shadow-theme-xs hover:bg-gray-50 hover:text-gray-800 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-white/[0.03] dark:hover:text-gray-200">
         <svg class="stroke-current fill-white dark:fill-gray-800" width="20" height="20" viewBox="0 0 20 20" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -22,7 +22,7 @@
             stroke-width="1.5" />
         </svg>
         Filter
-      </button>
+      </button> -->
       <button
         (click)="navigateTo() "
         class="inline-flex items-center gap-2 rounded-lg border border-gray-300 bg-white px-4 py-2.5 text-theme-sm font-medium text-gray-700 shadow-theme-xs hover:bg-gray-50 hover:text-gray-800 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-white/[0.03] dark:hover:text-gray-200">
